--- a/README
+++ b/README
@@ -9,3 +9,5 @@ On running you will not need to use a mouse
 7=Move The Mouse Cursor Right
 8=Move The Mouse Cursor Left
 9=End Program
+
+If You Do Not Want To Use The Exe You Can Use The Py File
